--- a/ImplicitIntent/app/src/main/res/layout/activity_main.xml
+++ b/ImplicitIntent/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/tvCurrentActivity"
+        android:id="@+id/tvView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="First Activity"
+        android:text="Welcome to the Implicit Intent"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,13 +18,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnNextActivity"
+        android:id="@+id/btnImplicitIntent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next Activity"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="91dp"
+        android:text="Implicit Intent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCurrentActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/tvView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
