--- a/FrenchTeacherApp/app/src/main/res/values/colors.xml
+++ b/FrenchTeacherApp/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#C80505</color>
+    <color name="yellow">#CEC048</color>
+    <color name="green">#4CAF50</color>
+    <color name="purple">#673AB7</color>
 </resources>
