--- a/VaccineApp/app/src/main/res/layout/recycler_item_layout.xml
+++ b/VaccineApp/app/src/main/res/layout/recycler_item_layout.xml
@@ -11,8 +11,11 @@
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tvVaccineTitle"
