--- a/NoteTakingApp/app/src/main/res/navigation/navigation_graph.xml
+++ b/NoteTakingApp/app/src/main/res/navigation/navigation_graph.xml
@@ -7,17 +7,32 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.notetakingapp.HomeFragment"
+        android:name="com.example.notetakingapp.fragments.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_newNoteFragment"
+            app:destination="@id/newNoteFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_updateNoteFragment"
+            app:destination="@id/updateNoteFragment" />
+    </fragment>
     <fragment
         android:id="@+id/newNoteFragment"
-        android:name="com.example.notetakingapp.NewNoteFragment"
+        android:name="com.example.notetakingapp.fragments.NewNoteFragment"
         android:label="fragment_new_note"
-        tools:layout="@layout/fragment_new_note" />
+        tools:layout="@layout/fragment_new_note" >
+        <action
+            android:id="@+id/action_newNoteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/updateNoteFragment"
-        android:name="com.example.notetakingapp.UpdateNoteFragment"
+        android:name="com.example.notetakingapp.fragments.UpdateNoteFragment"
         android:label="fragment_update_note"
-        tools:layout="@layout/fragment_update_note" />
+        tools:layout="@layout/fragment_update_note" >
+        <action
+            android:id="@+id/action_updateNoteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
