Note Taking App

--- a/NoteTakingApp/app/src/main/res/navigation/navigation_graph.xml
+++ b/NoteTakingApp/app/src/main/res/navigation/navigation_graph.xml
@@ -34,5 +34,11 @@
         <action
             android:id="@+id/action_updateNoteFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+
+        <argument
+            android:name="note"
+            app:argType="com.example.notetakingapp.model.Note"
+            app:nullable="true"/>
+
     </fragment>
 </navigation>
