--- a/CoroutinesApp/app/src/main/res/layout/activity_main.xml
+++ b/CoroutinesApp/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,15 @@
             app:layout_constraintTop_toBottomOf="@+id/btnStartCoroutine"
             app:layout_constraintVertical_bias="0.358" />
 
+        <Button
+            android:id="@+id/btnNextActivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go Next"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnStartDownload" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
