--- a/FirebaseApp/app/src/main/res/layout/activity_main.xml
+++ b/FirebaseApp/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
