--- a/JournalApp/app/src/main/res/layout/journal_card_view.xml
+++ b/JournalApp/app/src/main/res/layout/journal_card_view.xml
@@ -1,80 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="8dp"
-    app:cardUseCompatPadding="true">
+<layout>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:alpha="0.8"
-        android:elevation="5dp"
-        android:gravity="end"
-        android:orientation="horizontal">
+        android:layout_margin="5dp"
+        app:cardCornerRadius="8dp"
+        app:cardUseCompatPadding="true">
 
-        <TextView
-            android:id="@+id/journal_row_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:padding="3dp"
-            android:text="Title"
-            android:textSize="18sp" />
-
-        <ImageButton
-            android:id="@+id/journal_row_share_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_share" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/journal_image_list"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:cropToPadding="true"
-            android:scaleType="fitXY" />
+            android:alpha="0.8"
+            android:elevation="5dp"
+            android:gravity="end"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/journal_title_list"
+            <TextView
+                android:id="@+id/journal_row_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:padding="3dp"
+                android:text="Title"
+                android:textSize="18sp" />
+
+            <ImageButton
+                android:id="@+id/journal_row_share_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_share" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Title"
-            android:textSize="18dp"
-            android:textStyle="bold" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/journal_thought_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:paddingStart="10dp"
-            android:paddingTop="15dp"
-            android:paddingEnd="15dp"
-            android:text="Description"
-            android:textSize="18dp"
-            android:textStyle="normal" />
+            <ImageView
+                android:id="@+id/journal_image_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:cropToPadding="true"
+                android:scaleType="fitXY" />
 
-        <TextView
-            android:id="@+id/journal_timestamp_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Date Created"
-            android:textStyle="italic" />
+            <TextView
+                android:id="@+id/journal_title_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="Title"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/journal_thought_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:paddingStart="10dp"
+                android:paddingTop="15dp"
+                android:paddingEnd="15dp"
+                android:text="Description"
+                android:textSize="18dp"
+                android:textStyle="normal" />
 
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/journal_timestamp_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="Date Created"
+                android:textStyle="italic" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+</layout>
