--- a/JournalApp/app/src/main/res/layout/journal_card_view.xml
+++ b/JournalApp/app/src/main/res/layout/journal_card_view.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    
+    <data>
+        
+        <variable
+            name="journal"
+            type="com.example.journalapp.model.Journal" />
+        
+    </data>
+    
+    
+    <androidx.cardview.widget.CardView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
