--- a/JournalApp/app/src/main/res/layout/journal_card_view.xml
+++ b/JournalApp/app/src/main/res/layout/journal_card_view.xml
@@ -34,7 +34,7 @@
                 android:layout_weight="1"
                 android:gravity="start"
                 android:padding="3dp"
-                android:text="Title"
+                android:text="@{journal.username}"
                 android:textSize="18sp" />
 
             <ImageButton
@@ -51,6 +51,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:background="@{journal.imageUrl}"
                 android:id="@+id/journal_image_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -63,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="Title"
+                android:text="@{journal.title}"
                 android:textSize="18dp"
                 android:textStyle="bold" />
 
@@ -75,7 +76,7 @@
                 android:paddingStart="10dp"
                 android:paddingTop="15dp"
                 android:paddingEnd="15dp"
-                android:text="Description"
+                android:text="@{journal.thoughts}"
                 android:textSize="18dp"
                 android:textStyle="normal" />
 
@@ -84,7 +85,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="Date Created"
+                android:text="@{journal.timeAdded.toString()}"
                 android:textStyle="italic" />
 
         </LinearLayout>
