--- a/JournalApp/app/src/main/res/layout/activity_main.xml
+++ b/JournalApp/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/gradient_main"
-        tools:context=".view.MainActivity">
+        tools:context=".view.SignInActivity">
 
 
         <TextView
