--- a/JournalApp/app/src/main/res/layout/journal_card_view.xml
+++ b/JournalApp/app/src/main/res/layout/journal_card_view.xml
@@ -51,7 +51,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:background="@{journal.imageUrl}"
+                android:background="@{Integer.parseInt(journal.imageUrl)}"
                 android:id="@+id/journal_image_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
